<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ark.statemachine</groupId>
    <artifactId>ark-component-statemachine</artifactId>
    <name>ark-component-statemachine</name>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <description>状态机组件</description>

    <modules>
        <module>ark-component-statemachine-dao</module>
        <module>ark-component-statemachine-core</module>
        <module>ark-component-statemachine-spring-boot-starter</module>
        <module>ark-component-statemachine-spring</module>
    </modules>

    <properties>
        <spring-statemachine.version>2.5.0</spring-statemachine.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.ark.boot</groupId>
                <artifactId>ark-dependencies</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.statemachine</groupId>
                <artifactId>spring-statemachine-bom</artifactId>
                <version>${spring-statemachine.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.ark.statemachine</groupId>
                <artifactId>ark-component-statemachine-dao</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.statemachine</groupId>
                <artifactId>ark-component-statemachine-core</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

        </dependencies>

    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
